fix(taost): aligned css rules with banner

--- a/core/src/components/toast/toast.scss
+++ b/core/src/components/toast/toast.scss
@@ -89,13 +89,14 @@
     }
 
     .header,
-    slot[name='header'] {
+    slot[name='header']::slotted(*) {
       font: var(--tds-headline-07);
       letter-spacing: var(--tds-headline-07-ls);
       color: var(--tds-toast-headline-color);
     }
 
-    .subheader {
+    .subheader,
+    slot[name='subheader']::slotted(*) {
       margin-top: 4px;
       color: var(--tds-toast-subheadline-color);
       font: var(--tds-detail-02);
@@ -120,16 +121,6 @@
       &.no-subheader {
         margin-top: 4px;
       }
-    }
-
-    slot[name='subheader']::slotted(*) {
-      color: var(--tds-toast-subheadline-color);
-      font: var(--tds-detail-02);
-      letter-spacing: var(--tds-detail-02-ls);
-      max-width: 252px;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
     }
   }
 
